--- a/public/index.html
+++ b/public/index.html
@@ -70,10 +70,75 @@
         </div>
       </div>
       <div class="welcome-jumbo">
-        Jumbo
+        <div class="status">NEW</div>
+        <h1>Billy Burger</h1>
+        <img src="https://i.ya-webdesign.com/images/hamburger-and-fries-png-4.png" class="burger-fries">
       </div>
     </section>
+    <section id="information">
+      <div class="restaurant-image">
+        <img src="img/top-down.jpg">
+      </div>
+      <div class="info">
+        <h2>We Started From The Bottom in 1987</h2>
+        <div class="paragraphs">
+            <p>Lorem, ipsum dolor sit amet consectetur 
+                adipisicing elit. Nobis ex itaque nihil et 
+                odio ipsum sapiente laborum quos veritatis 
+                magni voluptatem, dolorem molestias quaerat 
+                maxime cum saepe nesciunt libero similique.
+                Lorem, ipsum dolor sit amet consectetur 
+                adipisicing elit. Nobis ex itaque nihil et 
+                odio ipsum sapiente laborum quos veritatis 
+                magni voluptatem, dolorem molestias quaerat 
+                maxime cum saepe nesciunt libero similique.
+            </p>
+            <p>Lorem, ipsum dolor sit amet consectetur 
+                adipisicing elit. Nobis ex itaque nihil et 
+                odio ipsum sapiente laborum quos veritatis 
+                magni voluptatem, dolorem molestias quaerat 
+                maxime cum saepe nesciunt libero similique.
+                Lorem, ipsum dolor sit amet consectetur 
+                adipisicing elit. Nobis ex itaque nihil et 
+                odio ipsum sapiente laborum quos veritatis 
+                magni voluptatem, dolorem molestias quaerat 
+                maxime cum saepe nesciunt libero similique.
+            </p>
+        </div>
+        <a href="#" class="about-link">
+          <span>Learn more about restaurants</span>
+          <div class="circle-right">
+            <i class="fa fa-chevron-right" aria-hidden="true"></i>
+          </div>
+        </a>
 
+      </div>
+    </section>
+    <section id="food-preview">
+      <h2>We have everything you need to kill your hunger</h2>
+      <div class="button-rounded">View Our Menu</div>
+      <div class="food-slider">
+        <div class="slide">
+          <div class="background"></div>
+          <div class="content">
+            <div class="food-title"> 
+                Starters
+            </div>
+            <p class="food-description">
+                Lorem ipsum dolor sit amet consectetur, 
+                adipisicing elit. Dolores aperiam eaque earum
+                libero nesciunt saepe atque similique tempora
+                mollitia aliquam, aut repellendus nostrum 
+                cum labore quae eos, quidem architecto fugiat.
+            </p>
+            <div class="food-image">
+              <img src="https://i.ya-webdesign.com/images/hamburger-and-fries-png-4.png">
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </section>
 
 
 
